fix featured ad banner height on mobile

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -117,7 +117,7 @@ footer {
   }
   .store--featured {
     padding-bottom: 0px;
-    min-height: 850px;
+    margin-bottom: 20px;
   }
 
   .store--featured h3 {
